crates/vm/tests/snapshots/literals__float.snap
---
source: crates/vm/tests/literals.rs
expression: snapshot
---
# Input:
0.1

# Result (success):
0.1

# Stdout:

