crates/vm/tests/snapshots/literals__float_exp.snap
---
source: crates/vm/tests/literals.rs
expression: snapshot
---
# Input:
1.5e3

# Result (success):
1500

# Stdout:

