crates/vm/tests/snapshots/literals__int.snap
---
source: crates/vm/tests/literals.rs
expression: snapshot
---
# Input:
1

# Result (success):
1

# Stdout:

