crates/vm/tests/snapshots/literals__string.snap
---
source: crates/vm/tests/literals.rs
expression: snapshot
---
# Input:
"\tas\\df\u{2800}\x28\n"

# Result (success):
"	as\df⠀(
"

# Stdout:

